src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTWin32KeyedMutex_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTWin32KeyedMutex_StringErrorContext.class */
public final class EXTWin32KeyedMutex_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glAcquireKeyedMutexWin32EXT(IJI)Z", "net/labymod/core/laby3d/opengl/error/generated/EXTWin32KeyedMutexErrorContext");
        methods.put("glReleaseKeyedMutexWin32EXT(IJ)Z", "net/labymod/core/laby3d/opengl/error/generated/EXTWin32KeyedMutexErrorContext");
        return methods;
    }
}
